<resources>
    <string name="app_name">Washer</string>
    <string name="press_to_find_device">Πάτα για να βρεις την συσκευή</string>
    <string name="add_device">ή βαλτην χειροκίνητα</string>
    <string name="loading">Loading</string>
    <string name="choose_washer_string">Επίλεξε την συσκευή που θες να χρησιμοποιήσεις</string>
    <string name="scan_again">Ψάξε ξανά</string>
    <string name="no_washers_found">Δεν βρέθηκαν πλυντήρια!</string>
    <string name="my_washers_string">Τα πλυντήριά μου</string>
    <string name="app_options_string">Ρυθμίσεις εφαρμογής</string>
    <string name="start_washing_string">Έναρξη πλυσίματος</string>
    <string name="friendly_name">Φιλική ονομασία</string>
    <string name="delete">Διαγραφή</string>
    <string name="save">Αποθήκευση</string>
    <string name="add_or_delete_friendly_name">Διέγραψε την φιλική ονομασία του πλυντηρίου σου ή πληκτρολόγησε την δική σου.</string>
    <string name="program_name"> Πρόγραμμα βαμβακερά</string>
    <string name="spin"> Στροφές</string>
    <string name="ver_title">Επιβεβαιώστε τις ρυθμίσεις του προγράμματος σας</string>
    <string name="Temperature"> Θερμοκρασία</string>
    <string name="duration">Το πρόγραμμα σας θα διαρκέσει 2 ώρες και 30 λεπτά</string>
    <string name="duration2">Το πρόγραμμα σας θα διαρκέσει</string>
    <string name="notify">Θέλω να ειδοποιηθώ κατά τη λήξη του πλυσίματος.</string>
    <string name="start">ΕΝΑΡΞΗ</string>
    <string name="choose_program">Επίλεξε το πρόγραμμα πλυσίματος</string>
    <string name="fast_program">ΠΡΌΓΡΑΜΜΑ ΓΡΉΓΟΡΗΣ ΠΛΎΣΗΣ</string>
    <string name="eco_program">ΟΙΚΟΝΟΜΙΚΌ ΠΡΌΓΡΑΜΜΑ</string>
    <string name="cotton_program">ΠΡΌΓΡΑΜΜΑ ΓΙΑ ΒΑΜΒΑΚΕΡΆ</string>
    <string name="synthetic_program">ΠΡΌΓΡΑΜΜΑ ΓΙΑ ΣΥΝΘΕΤΙΚΆ</string>
    <string name="vul_program">ΠΡΌΓΡΑΜΜΑ ΓΙΑ ΕΥΑΊΣΘΗΤΑ</string>
    <string name="mallina_program">ΠΡΌΓΡΑΜΜΑ ΓΙΑ ΜΆΛΛΙΝΑ ΡΟΎΧΑ</string>
    <string name="white_program">ΠΡΌΓΡΑΜΜΑ ΓΙΑ ΛΕΥΚΆ</string>
    <string name="fast">Γρήγορο</string>
    <string name="eco">Οικονομικό</string>
    <string name="cotton">Βαμβακερά</string>
    <string name="synthetic">Συνθετικά</string>
    <string name="vul">Ευαίσθητα</string>
    <string name="mallina">Μάλλινα</string>
    <string name="white">Λευκά</string>
    <string name="program">Πρόγραμμα</string>
    <string name="turns">Στροφές</string>
    <string name="temperature">Θερμοκρασία</string>
    <string name="confirm">Επιβεβαίωση</string>
    <string name="Continue">Συνέχεια</string>
    <string name="choose_speed">Επίλεξε τον αριθμό στροφών</string>
    <string name="four_hundrend">400</string>
    <string name="eight_hundrend">800</string>
    <string name="one_thousand">1000</string>
    <string name="one_thousand_two">1200</string>
    <string name="one_thousand_six">1600</string>
    <string name="choose_temperature">Επίλεξε την θερμοκρασία</string>
    <string name="twenty">20</string>
    <string name="fourty">40</string>
    <string name="sixty">60</string>
    <string name="ninety">90</string>
    <string name="edit_washer_string">Πρόσθεσε φιλική ονομασία στο πλυντήριό σου για να το ξεχωρίζεις από τα υπόλοιπα.</string>
    <string name="cancel">Ακύρωση</string>
    <string name="headerDuration">Η πλύση διαρκεί ακόμα</string>
    <string name="wash_finished">Η πλύση ολοκληρώθηκε!</string>
    <string name="wash_not_finished">Η πλύση ακυρώθηκε!</string>
    <string name="cancel_question">Είσαι σίγουρος ότι επιθυμείς να σταματήσεις την πλύση;</string>
    <string name="yes">ΝΑΙ</string>
    <string name="no">ΟΧΙ</string>
    <string name="hours">ώρες</string>
    <string name="hour">ώρα</string>
    <string name="minutes">λεπτά</string>
    <string name="minute">λεπτό</string>
    <string name="seconds">δευτερόλεπτα</string>
    <string name="ver_program">Πρόγραμμα:</string>
    <string name="ver_speed">Στροφές:</string>
    <string name="ver_temp">Θερμοκρασία:</string>
    <string name="minimize_question">Συνεχίζοντας η διαδικασία θα λειτουργεί στο background</string>
    <string name="minimize">Παράλληλη λειτουργία</string>
    <string name="and">και</string>
    <string name="goHome">Αρχική Σελίδα</string>
    <string name="activeWash">Ενεργό πλύσιμο</string>
    <string name="app_language">Γλώσσα εφαρμογής</string>
    <string name="greek">Ελληνικά</string>
    <string name="english">Αγγλικά</string>
</resources>
