<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/ver_title"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/scrollbar"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="20sp"
        android:src = "@drawable/bar"
        />


    <ImageView
        android:layout_width="24sp"
        android:layout_height="24sp"
        android:src="@drawable/clothes_short_sleeve"
        app:layout_constraintRight_toLeftOf="@id/program_name"
        app:layout_constraintBottom_toBottomOf="@id/program_name"

        android:contentDescription="@string/program_name" />

    <TextView
        android:id="@+id/program_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150sp"
        android:text="@string/program_name"
        android:textAlignment="center"
        android:textSize="18sp"
        android:paddingStart="15sp"
        app:layout_constraintEnd_toEndOf="@id/scrollbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/scrollbar" />


    <ImageView
        android:layout_width="24sp"
        android:layout_height="24sp"
        android:src="@drawable/speed"
        app:layout_constraintRight_toLeftOf="@id/spin"
        app:layout_constraintBottom_toBottomOf="@id/spin"

        />

    <TextView
            android:id="@+id/spin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/spin"
            android:textAlignment="center"
            android:textSize="18sp"
            android:paddingStart="15sp"
            app:layout_constraintStart_toStartOf="@+id/program_name"
            app:layout_constraintTop_toBottomOf="@+id/program_name"/>

    <ImageView
        android:id = "@+id/vector"
        android:layout_width="24sp"
        android:layout_height="24sp"
        android:src="@drawable/vec"
        app:layout_constraintRight_toLeftOf="@id/temperature"
        app:layout_constraintBottom_toBottomOf="@id/temperature"
        />


        <TextView
            android:id="@+id/temperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/Temperature"
            android:textAlignment="center"
            android:textSize="18sp"
            android:paddingStart="15sp"
            app:layout_constraintStart_toStartOf="@+id/spin"
            app:layout_constraintTop_toBottomOf="@+id/spin"/>

    <ImageView
        android:id = "@+id/stopwatch"
        android:layout_width="24sp"
        android:layout_height="24sp"
        android:src="@drawable/stopwatch_start"
        app:layout_constraintRight_toLeftOf="@id/duration"
        app:layout_constraintTop_toTopOf="@id/duration"

        />


    <TextView
    android:id="@+id/duration"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="100sp"
    android:paddingStart="15sp"
    android:paddingEnd="50sp"
    android:text="@string/duration"
    android:textAlignment="textStart"
    android:textSize="18sp"
    app:layout_constraintEnd_toEndOf="@id/linearLayout"
    app:layout_constraintStart_toStartOf="@id/vector"
    app:layout_constraintTop_toBottomOf="@id/temperature" />

    <CheckBox
        android:layout_width="24sp"
        android:layout_height="24sp"
        app:layout_constraintRight_toLeftOf="@id/notify"
        app:layout_constraintTop_toTopOf="@id/notify"/>


    <TextView
        android:id="@+id/notify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:paddingLeft="15sp"
        android:paddingEnd="50sp"
        android:text="@string/notify"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="@id/vector"
        app:layout_constraintTop_toBottomOf="@id/duration" />

    <Button
        android:id = "@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:backgroundTint = "#53A83E"
        app:layout_constraintTop_toBottomOf="@id/notify"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="20sp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
