<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical"
    tools:context=".ChooseProgramActivity">

    <TextView
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/choose_program"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>

    <ScrollView
        android:scrollbars="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:id="@+id/programStage_layout"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/stage1ImageView"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:src="@drawable/stage1_icon"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/stage1TextView"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:text="@string/program"
                    android:textSize="10sp"
                    android:gravity="center"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:src="@drawable/next_icon"
                android:layout_gravity="center_vertical"/>

            <LinearLayout
                android:id="@+id/turnStage_layout"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/stage2ImageView"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:src="@drawable/stage2_icon"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/stage2TextView"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:text="@string/turns"
                    android:textSize="10sp"
                    android:gravity="center"
                    android:textStyle="bold"/>

            </LinearLayout>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:src="@drawable/next_icon"
                android:layout_gravity="center_vertical"/>

            <LinearLayout
                android:id="@+id/temperatureStage_layout"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/stage3ImageView"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/stage3_icon" />

                <TextView
                    android:id="@+id/stage3TextView"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:text="@string/temperature"
                    android:textSize="10sp"
                    android:gravity="center"
                    android:textStyle="bold"/>

            </LinearLayout>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:src="@drawable/next_icon"
                android:layout_gravity="center_vertical"/>

            <LinearLayout
                android:id="@+id/confirmStage_layout"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/stage4ImageView"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:src="@drawable/stage4_icon"
                    android:layout_gravity="center_horizontal"
                    />

                <TextView
                    android:id="@+id/stage4TextView"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:text="@string/confirm"
                    android:textSize="10sp"
                    android:gravity="center"
                    android:textStyle="bold"/>

            </LinearLayout>



        </LinearLayout>

    </ScrollView>


    <ScrollView
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <GridLayout
            android:layout_gravity="center"
            android:padding="16dp"
            android:rowCount="4"
            android:columnCount="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <!-- Row One -->

            <androidx.cardview.widget.CardView
                android:layout_marginRight="30dp"
                android:layout_gravity="right"
                android:layout_width="147dp"
                android:layout_height="141dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.2">

                        <ImageView
                            android:id="@+id/fast_infoButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/info_button"
                            android:layout_marginRight="5dp"/>

                    </RelativeLayout>


                    <TextView
                        android:id="@+id/fastProgram_card"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.8"
                        android:text="@string/fast_program"
                        style="@style/topic_textView"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_gravity="left"
                android:layout_width="147dp"
                android:layout_height="141dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.2">

                        <ImageView
                            android:id="@+id/eco_infoButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/info_button"
                            android:layout_marginRight="5dp"/>

                    </RelativeLayout>


                    <TextView
                        android:id="@+id/ecoProgram_card"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.8"
                        android:text="@string/eco_program"
                        style="@style/topic_textView"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>



            <!-- Row Two -->

            <androidx.cardview.widget.CardView
                android:layout_marginRight="30dp"
                android:layout_gravity="right"
                android:layout_width="147dp"
                android:layout_height="141dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.2">

                        <ImageView
                            android:id="@+id/cotton_infoButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/info_button"
                            android:layout_marginRight="5dp"/>

                    </RelativeLayout>


                    <TextView
                        android:id="@+id/cottonProgram_card"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.8"
                        android:text="@string/cotton_program"
                        style="@style/topic_textView"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_gravity="left"
                android:layout_width="147dp"
                android:layout_height="141dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.2">

                        <ImageView
                            android:id="@+id/synthetic_infoButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/info_button"
                            android:layout_marginRight="5dp"/>

                    </RelativeLayout>


                    <TextView
                        android:id="@+id/syntheticProgram_card"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.8"
                        android:text="@string/synthetic_program"
                        style="@style/topic_textView"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>




            <!-- Row Three -->

            <androidx.cardview.widget.CardView
                android:layout_marginRight="30dp"
                android:layout_gravity="right"
                android:layout_width="147dp"
                android:layout_height="141dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.2">

                        <ImageView
                            android:id="@+id/vul_infoButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/info_button"
                            android:layout_marginRight="5dp"/>

                    </RelativeLayout>


                    <TextView
                        android:id="@+id/vulProgram_card"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.8"
                        android:text="@string/vul_program"
                        style="@style/topic_textView"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_gravity="left"
                android:layout_width="147dp"
                android:layout_height="141dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.2">

                        <ImageView
                            android:id="@+id/mallina_infoButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/info_button"
                            android:layout_marginRight="5dp"/>

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/mallinaProgram_card"
                        style="@style/topic_textView"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.8"
                        android:text="@string/mallina_program" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Row Four -->

            <androidx.cardview.widget.CardView
                android:layout_marginRight="30dp"
                android:layout_gravity="right"
                android:layout_width="147dp"
                android:layout_height="141dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.2">

                        <ImageView
                            android:id="@+id/white_infoButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/info_button"
                            android:layout_marginRight="5dp"/>

                    </RelativeLayout>


                    <TextView
                        android:id="@+id/whiteProgram_card"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.8"
                        android:text="@string/white_program"
                        style="@style/topic_textView"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>




        </GridLayout>

    </ScrollView>


</LinearLayout>